G1: update 12 files
